<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.DetailMovieFragment">

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:background="@android:color/holo_green_light"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_30dp"
        android:text="Movie Name"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".60"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_5dp">

                <ImageView
                    android:id="@+id/backdrop_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".45"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:scaleType="fitCenter"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".55"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_year"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_10dp"
                            android:layout_weight=".70"
                            android:text="@string/released_on"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <ImageButton
                            android:id="@+id/mark_fav"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_weight=".30"
                            android:src="@drawable/fav_selector"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_avg"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/txt_vote_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_count"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/txt_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".40"
                android:padding="@dimen/dimen_10dp">

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=" something"
                    android:textColor="@android:color/black"/>

            </ScrollView>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".02"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_trailers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:background="@drawable/text_background_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/trailers_title"
            android:textColor="@color/text_color_selector"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_reviews"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:background="@drawable/text_background_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/reviews_title"
            android:textColor="@color/text_color_selector"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".28">

        <ListView
            android:id="@+id/trailers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/no_results"
            android:textColor="@color/colorRed600"
            android:textSize="@dimen/size_30sp"/>
    </RelativeLayout>

</LinearLayout>
